Change the MySQL commands for better wording and to remove host restrictions.

BUG: 225052